@@ -19,9 +19,9 @@
 package org.apache.pulsar.client.impl.auth.oauth2.protocol;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.concurrent.ExecutionException;
@@ -90,13 +90,8 @@ public class TokenClient implements ClientCredentialsExchanger {
             bodyMap.put("scope", req.getScope());
         }
         return bodyMap.entrySet().stream()
-                .map(e -> {
-                    try {
-                        return URLEncoder.encode(e.getKey(), "UTF-8") + '=' + URLEncoder.encode(e.getValue(), "UTF-8");
-                    } catch (UnsupportedEncodingException e1) {
-                        throw new RuntimeException(e1);
-                    }
-                })
+                .map(e -> URLEncoder.encode(e.getKey(), StandardCharsets.UTF_8) + '='
+                        + URLEncoder.encode(e.getValue(), StandardCharsets.UTF_8))
                 .collect(Collectors.joining("&"));
     }
 
